fix: Use overflow-y instead of overflow

--- a/src/shared/ui/components/card/index.scss
+++ b/src/shared/ui/components/card/index.scss
@@ -9,7 +9,7 @@
     background-color: rgba(color.$lightest, 0.25);
     border-radius: size.$task-radius;
     font-size: size.$small-text;
-    overflow: scroll;
+    overflow-y: scroll;
 
     .title {
         padding: 0.5 * size.$gap size.$gap;
